Changed flex style in header profile so it displays correctly on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,10 @@ figure {
 }
 
 .header__nav__profile {
-    display: flex;
+    /* ? Solo así funcionó en Safari... */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    /* display: flex; */
     margin-right: 10px;
 }
 
